Bug 1405090 - Port bug 1402309 to TB [Fix titlebar-fullscreen-button vertical alignment]. rs=jorgk

--- a/mail/themes/osx/mail/messenger.css
+++ b/mail/themes/osx/mail/messenger.css
@@ -74,6 +74,11 @@
   display: none;
 }
 
+#titlebar {
+  /* Centrally align content items vertically */
+  -moz-box-pack: center;
+}
+
 #titlebar:-moz-lwtheme {
   -moz-appearance: none;
 }
@@ -421,15 +426,6 @@ notification[value="addon-install-complete"] > button:active:hover {
 
 #messengerWindow[tabsintitlebar="true"]:not(:-moz-lwtheme) > #titlebar {
   -moz-appearance: -moz-window-titlebar;
-}
-
-#messengerWindow:not([tabsintitlebar]) > #titlebar > #titlebar-content > #titlebar-buttonbox-container {
-  margin-top: 3px;
-}
-
-#messengerWindow[tabsintitlebar] > #titlebar > #titlebar-content > #titlebar-buttonbox-container,
-#messengerWindow[tabsintitlebar] > #titlebar > #titlebar-content > #titlebar-fullscreen-button {
-  margin-top: 6px;
 }
 
 #titlebar-spacer {
